refactor: small code improvement